patient pages added

--- a/Medicdiary/centralapp/templates/centralapp/mainpage.html
+++ b/Medicdiary/centralapp/templates/centralapp/mainpage.html
@@ -85,7 +85,7 @@
                     <a class="nav-link" href="#about_us">About us</a>
                 </li>
                 <li class="nav-item button2">
-                    <a class="nav-link " href="#">Covid-19 Checkpoints </a>
+                    <a class="nav-link " href="{% url 'centralapp:Covid_19' %}">Covid-19 Checkpoints </a>
                 </li>
 
                 <li class="nav-item dropdown">
@@ -118,10 +118,6 @@
         </h2>
         <p style="font-size: 20px;">
             We at MedicDiary constantly endeavour to make management of your health records simple and easy.
-            <br>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae aliquid sequi eum, omnis ea officia,
-            quo eius voluptatibus et quae ut enim voluptates, ipsam ipsum nulla totam veritatis? Ad eaque quod magni
-            quibusdam debitis blanditiis natus animi accusamus voluptatem praesentium quidem quis id voluptatibus,
-            provident illum mollitia fuga nam pariatur?
             <br>
             Along with health record management we have a bunch of other features that will help you know everything you
             need to know about common diseases.
