--- a/Medicdiary/patient/templates/patient/base.html
+++ b/Medicdiary/patient/templates/patient/base.html
@@ -131,7 +131,7 @@
 						<li>Lavish Bansal<br></li>
 						<li>Shivangi Nayak</li>
 						</ul>
-						<a href="{% url 'centralapp:About_us' %}" class="useful_links" style="font-weight:bold">More about us</a>
+						<a href="#" class="useful_links" style="font-weight:bold">More about us</a>
 
 				</div>
 				<!-- Grid column -->
