--- a/Medicdiary/doctor/templates/doctor/base.html
+++ b/Medicdiary/doctor/templates/doctor/base.html
@@ -128,7 +128,7 @@
                     <li>Lavish Bansal<br></li>
                     <li>Shivangi Nayak</li>
                 </ul>
-                <a href="{% url 'centralapp:About_us' %}" class="useful_links" style="font-weight:bold">More about
+                <a href="#" class="useful_links" style="font-weight:bold">More about
                     us</a>
             </div>
             <hr class="w-100 clearfix d-md-none ">
