minor change in mainpage

--- a/Medicdiary/centralapp/templates/centralapp/mainpage.html
+++ b/Medicdiary/centralapp/templates/centralapp/mainpage.html
@@ -105,10 +105,10 @@
         </div>
     </nav>
     <div class="img1">
-        <div class="mainpage-head">
+        <div class="mainpage-head" style="top: 55%;">
             MEDICDIARY
         </div>
-        <div class="mainpage-text">
+        <div class="mainpage-text" style="top: 70%;">
             One place for all your health records.
         </div>
     </div>
